# Jarvis

./: .gitignore  Notes.md  README.md  requirements.txt  shell.nix
cli/: app.go  go.mod  go.sum
model/: chat_pb2.py  chat_pb2_grpc.py  codegen.py  download.py  grpc-server.py  grpc-test.py  local-pilot-server.py  main.py  run.py  run.sh  server.py  web_answers.py
model/protobufs/: chat.proto
server/: go.mod  main.go
server/handlers/: users.go
server/models/: questions.go  users.go
server/routes/: routes.go
web/: Cargo.toml  index.html  tailwind.config.js  tailwind.css
web/src/: api.rs  chat.rs  main.rs  types.rs
