[package]
name = "web"
version = "0.1.0"
edition = "2021"

[package.metadata.riff]
build-inputs = ["openssl.dev", "openssl", "pkg-config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
gloo = "0.8"
js-sys = "0.3"
